--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   width: 200px;
   background-color: #f1f1f1;
   float:left;
+  display:inline;
 }
 
 li a {
@@ -17,9 +18,10 @@ li a {
 /* Change the link color on hover */
 li a:hover {
   background-color: #555555;
-  color: white;
+  color: #FFFFFF;
 }
 .active {
   background-color: #4CAF50;
-  color: white;
+  color: #FFFFFF;
 }
+
