--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@
 
 li a {
   display: block;
-  color: #000;
   padding: 8px 16px;
-  text-decoration: none;
 }
 
 /* Change the link color on hover */
@@ -20,7 +18,7 @@ li a:hover {
   color: #FFFFFF;
 }
 .active {
-  background-color: #4CAF50;
+  background-color: #428bca;
   color: #FFFFFF;
 }
 
