--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
   padding: 0;
   width: 200px;
   background-color: #f1f1f1;
-  display:inline;
 }
 
 li a {
@@ -22,4 +21,7 @@ li a:hover {
 img{
   height:400px;
   width:400px;
+}
+li{
+    display:inline;
 }
