--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ li a:hover {
 img{
   height:400px;
   width:400px;
-  border-style:thick;
+  border-style:solid;
   border-width:2px;
   border-color:#000000;
 }
