--- a/style.css
+++ b/style.css
@@ -1,29 +1,27 @@
-.navbar {
-  list-style-type: none;
-  margin: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-  display: block;
-  padding: 8px 16px;
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333333;
+  overflow: hidden;
 }
-h2 a:hover {
-  background-color: #555555;
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: #000000;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
   color: #FFFFFF;
-}
-.active {
-  background-color: #428bca;
-  color: #FFFFFF;
-}
-img{
-  height:400px;
-  width:400px;
-  border-style:solid;
-  border-width:2px;
-  border-color:#000000;
-}
-h2{
-    display:inline;
-}
-body{
-  background-color:#A9A9A9;
 }
