--- a/style.css
+++ b/style.css
@@ -22,6 +22,6 @@
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #00A2ED;
   color: #FFFFFF;
 }
