--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ img{
   width:600px;
   border-style:solid;
   border-color:#000000;
-  border-weight:2px;
+  border-wieght:2px;
 }
 .example1{
   float:left;
